tree-sitter-thorn/test/corpus/variables.txt
================================================================================
Variable declaration
================================================================================

x = 5;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (number_literal))))

================================================================================
Immutable variable declaration
================================================================================

@immut PI = 3.14159;

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    name: (identifier)
    value: (number_literal)))

================================================================================
String variable
================================================================================

name = "Alice";

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (string_literal))))

================================================================================
Compound assignment
================================================================================

x += 5;
y -= 3;
z *= 2;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (number_literal)))
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (number_literal)))
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (number_literal))))

================================================================================
Null coalescing operator
================================================================================

safe = null ?? "default";

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (binary_expression
        left: (null_literal)
        right: (string_literal)))))